Update brand logo usage

--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="sv">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/belthran-monogram.svg" />
+    <link rel="apple-touch-icon" href="/images/belthran-monogram.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>FigTree</title>
+    <title>Belthran Consulting</title>
+    <meta property="og:title" content="Belthran Consulting" />
+    <meta property="og:description" content="Belthran Consulting app." />
+    <meta property="og:image" content="/images/belthran-monogram.svg" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Belthran Consulting" />
+    <meta name="twitter:description" content="Belthran Consulting app." />
+    <meta name="twitter:image" content="/images/belthran-monogram.svg" />
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
     <script>
       tailwind.config = {
